syntax = "proto3";

package dote.proto.api.action;

import "api/dotable.proto";

message AddPodcastRequest {
  string itunesUrl = 1;
  Extras extras = 2;
  message Extras {
    bool popular = 1;
  }
}

message AddPodcastResponse {
  repeated api.Dotable podcasts = 1;
}